--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.469.0",
     "mapbox-gl": "^3.9.1",
+    "motion": "^12.0.5",
     "next": "15.1.2",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
