--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@turf/turf": "^7.1.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/pg": "^8.11.10",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
