--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "postinstall": "prisma migrate deploy && prisma generate"
+    "lint": "next lint"
   },
   "dependencies": {
     "@auth/prisma-adapter": "2.7.2",
@@ -24,17 +23,21 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@turf/turf": "^7.1.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/multiparty": "^4.2.1",
     "@types/pg": "^8.11.10",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.4",
     "date-fns": "^4.1.0",
+    "formidable": "^3.5.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
     "mapbox-gl": "^3.9.1",
     "motion": "^12.0.5",
+    "multiparty": "^4.2.3",
     "next": "15.1.2",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.4",
