--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tanstack/react-table": "^8.21.2",
     "@turf/turf": "^7.1.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/formidable": "^3.4.5",
